[feature/state-editor] Fix toolbar display with canvas being too wide

--- a/src/assets/css/ide.css
+++ b/src/assets/css/ide.css
@@ -3032,6 +3032,8 @@ td.table-action a.btn {
 
 	box-shadow    : 0 2px 5px rgba(0, 0, 0, 0.1);
 	border-bottom : 1px solid #ccc;
+
+	overflow-y: scroll;
 }
 
 .toolbar-btn-group {
